# colorball-detection

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: colors.yaml  map_data.json  score.json  setting.json
frontend/: app.js  index.html  style.css
frontend/tools/: make_map.py
src/: main.py
src/camera/: __init__.py  capture.py  detector.py  visualizer.py
src/keymanager/: __init__.py  keymanager.py
src/logic/: __init__.py  logic.py
src/server/: __init__.py  web.py
