[project]
name = "2025festival-ball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pynput>=1.8.1",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
